# sem7-os

./: .gitignore  lab.ipynb
1/: script.cmd  script.sh
example/1/: .gitignore  CMakeLists.txt  README.md
example/1/lab1/scripts/: build_windows.cmd
example/1/lab2/scripts/: build_linux.sh  build_windows.cmd
example/1/lab3/include/: platform.h  shared.h
example/1/lab3/src/: main.cpp  platform.cpp
example/1/lab4/include/: common.h  sample.h  simulator.h
example/1/lab4/scripts/: build_linux.sh
example/1/lab4/src/: common.cpp  main.cpp  sample.cpp  simulator.cpp
example/1/lab5/include/: logging.h
example/1/lab5/src/: common.cpp  logging.cpp  main.cpp  sample.cpp
example/1/lab5/web/: index.html  package-lock.json  package.json  tailwind.config.js
example/1/lab5/web/src/: main.tsx  styles.css
example/1/lab5/web/src/components/: DataTable.tsx  LineChart.tsx
example/1/lab6/include/backend/: db.h  simulator.h
example/1/lab6/include/frontend/: MainWindow.h
example/1/lab6/src/backend/: server_main.cpp  simulator.cpp
example/1/lab7/: CMakeLists.txt
example/1/lab7/include/backend/: http_server.h
example/1/lab7/include/frontend/: ApiClient.h
example/1/lab7/src/backend/: common.cpp  logging.cpp  server_main.cpp
example/2/1_lab/: .gitignore  CMakeLists.txt  hello_world.cpp  pull_and_build.sh
example/2/2_lab/: .gitignore  CMakeLists.txt  process.cpp  process.hpp  pull_and_build.sh  test_code.cpp
example/2/3_lab/: main.cpp
example/2/4_lab/: 4lab.cpp  my_serial.hpp
example/2/5_lab/: 5lab.cpp  my_serial.hpp  proxy.py  site.html
example1/lab1/: CMakeLists.txt
example1/lab1/scripts/: build_linux.sh
example1/lab2/: CMakeLists.txt
example1/lab2/include/: bg_process.h
example1/lab2/src/: bg_process.cpp  bg_test.cpp
example1/lab3/: CMakeLists.txt
example1/lab3/include/: app.h
example1/lab3/scripts/: build_linux.sh
example1/lab3/src/: app.cpp  platform.cpp
example1/lab4/: CMakeLists.txt
example1/lab4/include/: logging.h
example1/lab4/scripts/: build_windows.cmd
example1/lab4/src/: logging.cpp
example1/lab5/: CMakeLists.txt
example1/lab5/include/: common.h
example1/lab5/scripts/: build_linux.sh
example1/lab5/src/: db.cpp
example1/lab5/web/: tsconfig.json
example1/lab5/web/src/: App.tsx  types.ts
example1/lab5/web/src/hooks/: usePolling.ts
example1/lab6/: CMakeLists.txt
example1/lab6/include/backend/: sample.h
example1/lab6/src/backend/: common.cpp  http_server.cpp
example1/lab6/src/frontend/: MainWindow.cpp  main.cpp
example1/lab7/include/backend/: backend.h
example1/lab7/include/frontend/: MainWindow.h
example1/lab7/scripts/: build_windows.cmd
example1/lab7/src/backend/: backend.cpp
example1/lab7/src/frontend/: ApiClient.cpp  MainWindow.cpp  main.cpp
labs/2/: CMakeLists.txt
labs/2/include/: bg_process.h
labs/2/src/: bg_process.c  bg_test.c
labs/3/: CMakeLists.txt
labs/3/include/: app.h  platform.h  shared.h
labs/3/scripts/: build_windows.cmd
labs/3/src/: app.c  main.c  platform.c  shared.c
labs/4/: 4.c  CMakeLists.txt  FINAL_STATUS.md  lab4  simulator  simulator.c  test.sh  test_improved.sh  test_quick.sh  test_signal.sh
